# claude-colab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: claude_colab_server.ipynb
src/claude_colab/: __init__.py  cli.py  client.py  config.py  crypto.py  mcp_server.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_crypto.py  test_init.py  test_mcp_server.py
