[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-colab"
version = "0.1.0"
description = "Give Claude Code GPU access via Google Colab"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Sravya Vedantham"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "cryptography>=41.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "respx>=0.20",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.0",
]

[project.scripts]
claude-colab = "claude_colab.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=claude_colab --cov-report=term-missing"
